--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 	"main": "build/index.js",
 	"scripts": {
 		"build": "wp-scripts build --blocks-manifest",
+		"start": "wp-scripts start --blocks-manifest",
+		"build-assets": "wp-scripts build index.scss --webpack-src-dir=assets --output-path=dist --webpack-no-externals",
+		"watch-assets": "wp-scripts start index.scss --webpack-src-dir=assets --output-path=dist --webpack-no-externals",
 		"format": "wp-scripts format",
 		"lint:css": "wp-scripts lint-style",
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
-		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start --blocks-manifest"
+		"plugin-zip": "wp-scripts plugin-zip"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^30.20.0"
